<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp" tools:context=".UnitsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/decimalNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="?"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <LinearLayout
            android:id="@+id/binarySwitchesLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decimalNumberTextView">

            <Switch
                android:id="@+id/switchBit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/switchBit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/switchBit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/switchBit0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/binarySwitchesLayout"
            android:gravity="center">

            <Button
                android:id="@+id/checkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check" />

            <Space
                android:layout_width="32dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/generateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate" />

        </LinearLayout>

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text=""
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>